Fix input styling on iOS

--- a/assets/css/_reset.scss
+++ b/assets/css/_reset.scss
@@ -4,3 +4,9 @@ ul {
   margin: 0;
   list-style: none;
 }
+
+input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
